testing synch